RESOLVED FIXED129905
[iOS] WebKit1 scroll position is incorrect
https://bugs.webkit.org/show_bug.cgi?id=129905
Summary [iOS] WebKit1 scroll position is incorrect
Benjamin Poulain
Reported 2014-03-07 13:18:05 PST
[iOS] WebKit1 scroll position is incorrect
Attachments
Patch (3.77 KB, patch)
2014-03-07 13:20 PST, Benjamin Poulain
no flags
Patch (3.74 KB, patch)
2014-03-07 13:25 PST, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2014-03-07 13:20:15 PST
WebKit Commit Bot
Comment 2 2014-03-07 13:22:55 PST
Attachment 226155 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 3 2014-03-07 13:25:20 PST
Benjamin Poulain
Comment 4 2014-03-07 13:50:28 PST
Comment on attachment 226156 [details] Patch Clearing flags on attachment: 226156 Committed r165288: <http://trac.webkit.org/changeset/165288>
Benjamin Poulain
Comment 5 2014-03-07 13:50:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.