[iOS] WebKit1 scroll position is incorrect https://bugs.webkit.org/show_bug.cgi?id=129905

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-03-07
Reviewed by Simon Fraser.

* page/DOMWindow.cpp:
(WebCore::DOMWindow::scrollX):
(WebCore::DOMWindow::scrollY):
A new optimization was avoiding layout if the position is zero. This was using the scrollX/Y instead
of actualScrollX/Y which caused us to always bail out instead of returning the value to JavaScript.

* platform/ScrollView.h:
(WebCore::ScrollView::actualScrollX):
(WebCore::ScrollView::actualScrollY):
(WebCore::ScrollView::actualScrollPosition):
This was accidentally changed to the iOS compat document visible rect at some point.


Canonical link: https://commits.webkit.org/147921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165288 268f45cc-cd09-0410-ab3c-d52691b4dbfc